# demo-group3

./: .env.example  .gitignore  README.md  deploy.sh  main_demos.py  pyproject.toml  tests.http  tmp-validation.txt
docs/challenges/: cognitive-load-reduction-assistant.md  inclusive-communication-hub.md  lab-notebook-ai-assistant.md
docs/poc/: inclusive-communication.md  lab-notebook.md
frontend/: index.html  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/login/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/components/: AccessibilityWrapper.tsx  AppChrome.tsx  BeforeAfterPreview.tsx  ChatResultCard.tsx  PipelineTimeline.tsx  ReadingLevelInfo.tsx
frontend/context/: UserContext.tsx
frontend/lib/: api.ts  profile.ts  types.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  endpoints.ts
infra/: README.md  main.bicep
infra/modules/: ai-search.bicep  embedding-model.bicep  generative-model.bicep
src/: __init__.py  devui_app.py  main.py
src/agents/: __init__.py  base_agent.py  comprehension_agent.py  explainability_agent.py  focus_assistant_agent.py  learning_support_agent.py  orchestrator_agent.py  parser_agent.py  simplifier_agent.py  task_descomposer_agent.py  teacher_agent.py  triage_agent.py
src/config/: __init__.py  settings.py
src/core/: exceptions.py
src/services/: auth_service.py  blob_service.py  cosmos_service.py  processing_service.py
(+29 files in other folders)
